# pike

./: .bumpversion.cfg  .coveragerc  .gitignore  .python-version  .travis.yml  LICENSE  README.rst  dev-requirements.txt  pyproject.toml  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/workflows/: ci.yml  claude-code.yml
docs/: Makefile  conf.py  index.rst  make.bat
docs/api/: index.rst
docs/user_guide/: getting_started.rst  index.rst  install.rst
pike/: finder.py  loader.py  manager.py
pike/discovery/: filesystem.py  py.py
tests/: conftest.py  test_finder.py  test_loader.py  test_manager.py  utils.py
tests/discovery/: test_filesystem.py  test_py.py
