[tool.poetry]
name = "pike"
version = "0.1.1"
description = "Lightweight plugin management system for Python"
authors = ["John Vrbanac <john.vrbanac@linux.com>"]
license = "Apache v2"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.7"


[tool.poetry.group.dev.dependencies]
pytest = "<7.4.4"
pretend = "<1.0.9"
flake8 = "<5.0.4"
coverage = "<7.6.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

